# repo-conformance

./: .cruft.json  .gitignore  .pre-commit-config.yaml  README.md  manifest.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.agent/: AGENTS.md
.agent/skills/cruft_resolution/: SKILL.md
.agent/skills/maintenance_journeys/: SKILL.md
.github/: renovate.json5
.github/workflows/: cruft.yaml  lint.yaml  pages.yaml  publish.yaml  python-app.yaml  python-app.yml  test.yaml
repo_conformance/: __init__.py  check.py  exceptions.py  list.py  list_repos.py  manifest.py  prs.py  registry.py  repo.py  update_repo.py
repo_conformance/checks/: __init__.py  checks.py  cruft.py  flake8.py  github.py  pydantic.py  python_version.py  registries.py  renovate.py  ruff.py  setupcfg.py  setuppy.py  worktree.py
tests/: __init__.py  test_manifest.py
