[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "repo_conformance"
version = "0.0.1"
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "Conformance tests for all of my git repositories."
readme = "README.md"
authors = [{ name = "Allen Porter", email = "allen.porter@gmail.com" }]
requires-python = ">=3.12"
classifiers = []
dependencies = [
  "nest_asyncio>=1.5.6",
  "GitPython>=3.1.30",
  "PyYAML>=6.0",
  "mashumaro>=3.14",
  "PyGithub>=1.58.0",
  "json5>=0.9.11",
]

[project.urls]
Source = "https://github.com/allenporter/repo_conformance"

[tool.setuptools.packages.find]
include = ["repo_conformance*"]

[project.entry-points."console_scripts"]
repo = "repo_conformance.repo:main"

[tool.mypy]
exclude = [
  "venv/",
]
platform = "linux"
show_error_codes = true
follow_imports = "normal"
local_partial_types = true
strict_equality = true
no_implicit_optional = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
disable_error_code = [
    "import-untyped",
]
extra_checks = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true
