[metadata]
name = repo-conformance
version = 0.0.1
description = repo-conformance is a set of tools for ensuring github repositories are configured correctly
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/allenporter/repo-conformance
author = Allen Porter
author_email = allen.porter@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License


[options]
packages = find:
install_requires =
  nest_asyncio>=1.5.6
  GitPython>=3.1.30
  PyYAML>=6.0
  pydantic>=1.10.6
  PyGithub>=1.58.0

[options.packages.find]
exclude =
    tests
    venv

[options.package_data]
repo_conformance = py.typed

[options.entry_points]
console_scripts =
    repo = repo_conformance.repo:main
