[metadata]
name = repo_conformance
version = 0.0.1
description = Conformance tests for all of my git repositories.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/allenporter/repo-conformance
author = Allen Porter
author_email = allen.porter@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >=3.12
install_requires =
  nest_asyncio>=1.5.6
  GitPython>=3.1.30
  PyYAML>=6.0
  mashumaro>=3.14
  PyGithub>=1.58.0
  json5>=0.9.11
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .
exclude =
    tests
    tests.*

[options.package_data]
repo_conformance = py.typed

[options.entry_points]
console_scripts =
    repo = repo_conformance.repo:main
